<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_item_connectionsList"
            android:icon="@drawable/rounded_button_big"
            android:title="@string/string_navigation_listofConnections" />
    <item
            android:id="@+id/navigation_item_favourites"
            android:icon="@drawable/rounded_button_big"
            android:title="@string/string_navigation_listofCities" />
    <item
            android:id="@+id/navigation_item_raw"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/string_navigation_raw" />

    <item
            android:id="@+id/navigation_item_info"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/string_navigation_info" />
    <item
            android:id="@+id/navigation_item_oldmetars"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/string_navigation_oldmetars" />
</menu>
